fluxo inicial da criacao do cliente - estrutura com es6
