# src/routes/customers.routes.js
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import CustomerController from "../app/controllers/CustomerController";
+
+const customersRouter = Router();
+
+
+customersRouter.post('/', CustomerController.create);
+
+
+export default customersRouter;
+
+
